modernize getItemRequirements